@@ -77,9 +77,9 @@
  PFALZGRAVIATE: "Pfalzgrafschaft"
  PFALZGRAVE: "Pfalzgraf"
  PFALZGRAVINE: "Pfalzgräfin"
- MONKEGRAVIATE: "Monkegrafschaft"
- MONKEGRAVE: "Monkegraf"
- MONKEGRAVINE: "Monkegräfin"
+ MONKEGRAVIATE: "Mönchgrafschaft"
+ MONKEGRAVE: "Mönchgraf"
+ MONKEGRAVINE: "Mönchgräfin"
  EXARCHATE: "Exarchat"
  EXARCH: "Exarch"
  EXARCHESS: "Exarchin"
