@@ -856,6 +856,92 @@
  shinto_incident_tanegashima.tt: "Dies beginnt den §YAnkunft der Mongolen§!-Vorfall."
  shinto_incident_kirishitan.tt: "Dies beginnt den §YMarienverehrung§!-Vorfall."
  shinto_incident_shogunate_authority.tt: "Dies beginnt den §YIkonoklasmus§!-Vorfall."
+#Gurus
+ NEW_GURU_TITLE: "Neuer Imam"
+ NO_GURU_TITLE: "Kein Imam"
+ guru_teaching: "Imam-Lehren"
+ CURRENT_GURU: "Current Imam"
+ NEXT_GURU: "Nächster Imam"
+ NEXT_GURU_DESC: "Macht der derzeitige Imam seinem Nachfolger Platz, wird $NAME$ an seine Stelle treten. Wird er zum Imam, hat das folgende Auswirkungen auf Eure Nation:\n\n$EFFECTS$"
+ CANNOT_PICK_TEACHING_NEW_GURU: "Ihr könnt nicht mehr als eine Lehre von jedem Imam auswählen."
+ GURU_APPOINTED: "$GURU|Y$ wird zum Imam."
+ NEW_GURU_SETUP: "Wenn ein neuer Imam ernannt wird."
+ NEW_GURU_1: "Neuer Imam"
+ NEW_GURU_2: "$GURU|Y$ wurde zum neuen Imam ernannt."
+ NEW_GURU_LOG: "Neuer Imam ernannt."
+ NO_GURU_SETUP: "Wenn kein Imam verfügbar ist."
+ NO_GURU_1: "Fehlender Imam"
+ NO_GURU_2: "Unserer Religion fehlt ein Imam."
+ NO_GURU_LOG: "Es wurde kein Imam ernannt."
+ CURRENT_GURU_IS: "Derzeitiger Imam ist "
+ CURRENT_GURU_IS_NOT: "Derzeitiger Imam ist NICHT "
+ imam_nizar: "Imam Nizar"
+ desc_imam_nizar: "Der Imam ist ein Rebell, der gegen seine korrupten Verwandten um die Kontrolle des schiitischen Imamats kämpft."
+ imam_ali: "Imam Ali"
+ desc_imam_ali: "Der Imam ist ein Stratege, der für die Sache der Batiniten Burgen weit weg von seiner Heimat erobert hat." 
+ imam_muhammad: "Imam Muhammad"
+ desc_imam_muhammad: "Der Imam lebt im Verborgenen, in völliger asketischer Abgeschiedenheit und konzentriert sich auf philosophische und theologische Fragen." 
+ imam_hassan: "Imam Hassan"
+ desc_imam_hassan: "Der Imam ist ein Anhänger des Tausendjährigen Reiches und hat die Qiyamat ausgerufen, einen außerordentlichen Zustand der Aufhebung des islamischen Rechts." 
+ imam_nuraddin: "Imam Nuraddin"
+ desc_imam_nuraddin: "Der Imam ist ein Gelehrter, der seine lange Amtszeit dazu nutzte, Texte über islamisches Recht und Rechtsprechung zu verfassen." 
+ imam_jalaladdin: "Imam Jalaladdin"
+ desc_imam_jalaladdin: "Der Imam ist ein Reformist, der sich nach außen hin zum Sunnitentum bekennt und die Werke seiner Vorfahren verbrennt." 
+ imam_aladdin: "Imam Aladdin"
+ desc_imam_aladdin: "Der Imam ist ein Verwaltungsbeamter, der eine batinische Verfassung schafft, die Jahrhunderte überdauern und eine intellektuelle Renaissance einleiten wird." 
+ imam_ruknaddin: "Imam Ruknaddin"
+ desc_imam_ruknaddin: "Der Imam ist ein Diplomat, der geschickt mit den Mongolen verhandelt, um die Integrität der batinischen Bewegung zu wahren." 
+ imam_shamsaddin: "Imam Shamsaddin"
+ desc_imam_shamsaddin: "Der Imam führt ein einfaches und frommes Leben als Sticker, weit weg von den Staatsgeschäften." 
+ imam_shah_tahir: "Imam Shah Tahir"
+ desc_imam_shah_tahir: "Der Imam ist ein Wissenschaftler, der am Hof eines großen Königs viele Bücher über Astronomie schreibt." 
+ imam_amir: "Imam Amir"
+ desc_imam_amir: "Der letzte Imam der muminitischen batinischen Linie ist verschollen, und man glaubt, dass er sich in der Verborgenheit befindet." 
+ gurmukhi_script_teaching: "Kaligrafische Schrift"
+ wrestling_akhara: "Assassinenausbildung"
+ dasvandh_collection: "Zakat-Sammlung"
+ anand_karaj: "Cem-Zeremonie"
+ sanghat_equality: "Ethnische Gleichheit"
+ masand_system: "Tributsystem"
+ adi_granth: "Batinische Verfassung"
+ martyrdom: "Märtyrertum"
+ miri_and_piri: "Dais und Pirs"
+ impartial_manjis: "Unparteiische Ulama"
+ one_guru: "Ein Imam"
+ illiterate_recites_saloks: "Dhikr rezitieren"
+ the_word_of_sikh: "Das Wort des Islam"
+ dharam_yudh: "Kleiner Dschihad"
+ the_khalsa_sikh: "Die Tariqa"
+ eternally_living_guru: "Verborgener Imam"
+ sikhism_flavor.2.t: "Imam Ali"
+ sikhism_flavor.2.d: "Mit der Hinrichtung von Imam Nazir durch seine korrupten Verwandten in Ägypten ist die Führung der Batiniten auf seinen Sohn Ali übergegangen. Möge Ali die Gemeinschaft zu wahrer Größe führen!"
+ sikhism_flavor.2.a: "Das Licht des Imams leuchtet auf."
+ sikhism_flavor.3.t: "Imam Muhammad"
+ sikhism_flavor.3.d: "Ali führte die Batiniten von Ägypten nach Persien und erlangte mit geschickten Plänen die Kontrolle über einen Flickenteppich von Festungen in der ganzen Region. Nun ist seine Zeit gekommen, denn Imam Muhammad hat die Führung der Gemeinschaft übernommen."
+ sikhism_flavor.3.a: "Unser Imam ist die Stärke der Schwachen und die Emanzipation der Sklaven!"
+ sikhism_flavor.4.t: "Imam Hassan"
+ sikhism_flavor.4.d: "Der fromme Imam Muhammad lebte sein ganzes Leben in Abgeschiedenheit und konzentrierte sich auf asketische Angelegenheiten und die Erstellung gelehrter philosophischer Texte. Sein Nachfolger Imam Hassan scheint in seinem Handeln weit weniger quietistisch zu sein."
+ sikhism_flavor.4.a: "Unser Imam ist ein Diener Gottes und wir dienen unserem Imam."
+ sikhism_flavor.5.t: "Imam Nuraddin"
+ sikhism_flavor.5.d: "Nach Imam Hassans beispielloser Aktion, die Qiyamat, die Aufhebung aller islamischen Gesetze vor der Endzeit, auszurufen, hat sich sein Sohn Imam Nuraddin verpflichtet, die Entscheidung seines verstorbenen Vaters aufrechtzuerhalten."
+ sikhism_flavor.6.t: "Imam Jalaladdin"
+ sikhism_flavor.6.d: "Imam Nuraddin war unser am längsten regierendes Oberhaupt, doch sein Nachfolger Imam Dschalaladdin plant, sein Erbe erheblich umzukrempeln. Jalaladdin behauptet offen, Sunnit zu sein und wirbt um die Gunst der abbasidischen Kalifen!"
+ sikhism_flavor.6.a: "Wird Abu Bakr den Platz von Ali in unseren Herzen einnehmen?"
+ sikhism_flavor.7.t: "Imam Aladdin"
+ sikhism_flavor.7.d: "Die stürmische Regierungszeit von Imam Jalaladdin, die viele als eine Form der Taqiyya ansahen, endete mit seiner Vergiftung, und sein Nachfolger Imam Aladdin möchte sich wieder auf Verwaltungsangelegenheiten konzentrieren."
+ sikhism_flavor.7.a: "Genug der Konflikte, jetzt ist die Zeit der Heilung gekommen."
+ sikhism_flavor.8.t: "Imam Ruknaddin"
+ sikhism_flavor.8.d: "Während Imam Aladdins Verfassung Jahrhunderte überdauern wird, ist dieser Mann inzwischen verstorben, während sein Nachfolger Imam Ruknaddin in erster Linie gute Beziehungen zu den Mongolen pflegen will."
+ sikhism_flavor.8.a: "Unser Imam ist immer noch unser Segen."
+ sikhism_flavor.9.t: "Imam Shamsaddin"
+ sikhism_flavor.9.d: "Nach dem Verlust der alten Batinitenburg von Alamut starb Imam Ruknaddin in Schande, woraufhin sein Sohn Imam Schamsaddin nach Aserbaidschan geschickt wurde, um als Sticker zu arbeiten und sich auf die einfacheren Dinge des Lebens zu konzentrieren."
+ sikhism_flavor.9.a: "Wer Gott begegnen will, kann ihn in seinen Hymnen finden."
+ sikhism_flavor.10.t: "Imam Shah Tehir"
+ sikhism_flavor.10.d: "Nach der Zersplitterung der batinischen Gemeinschaft in zwei Linien hat sich schließlich ein neuer Imam einen Namen gemacht, der ein großer Astronom und Naturphilosoph geworden ist."
+ sikhism_flavor.10.a: "Die Imame gehören zu Gott, der Sieg gehört zu Gott!"
+ sikhism_flavor.11.t: "Imam Amir"
+ sikhism_flavor.11.d: "Während das Erbe von Imam Schah Tehir in den Annalen der Geschichte verblasst, wird ein letzter Imam seiner Linie, Imam Amir, die Gemeinschaft bis zu seiner langfristigen Verfinsterung führen."
+ sikhism_flavor.11.a: "Unser Imam ist der wahre König und der Schild der Unterdrückten."
 #Misc
  PATRIARCH_DESCRIPTION: "Die patriarchale Autorität gibt Auskunft über den Einfluss, den die Kirche auf das Land hat. In gläubigen Provinzen verringert sich durch eine hohe patriarchale Autorität das Revoltenrisiko und die Anzahl der potentiellen Rekruten für die Armee erhöht sich."
  PATRIARCHAL_BLESSINGS: "Patriarchale Segen"
