@@ -7,7 +7,8 @@
 -Added new mission tree for Cornwall with 17 missions
 -Reworked the following mission trees: Toulouse, Palatinate (thanks to FrenchKnight), Worms
 -Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich, Milan, Papal States, Venice, Hungary, Volga Bulgaria, Sweden
--Added the following monuments and associated events: Kaiserdom of Speyer, Polish Royal Salt Mines, Winter Palace of Neva, Aleppo Citadel, Tsarevets of Tarnovo
+-Added the following monuments and associated events: Kaiserdom of Speyer, Polish Royal Salt Mines, Winter Palace of Neva, Aleppo Citadel, Tsarevets of Tarnovo, Piazza of Venice, Cathedral of Florence, Brandenburg Gate, Charles Bridge of Prague
+-Added Gurus to Batinism representing replacing Piety
 -Overhauled the following custom event sets: Baltic Pagan
 -Eliminated generic unit models for many cultures when owning the respective unit packs
 -Added the following alternative country names: Tarki (Huns), Sabbioneta (Cremona)
